<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    tools:context=".ui.MainActivity">

    <SearchView
        android:id="@+id/searchViewSearch"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:layout_marginStart="7dp"
        android:layout_marginEnd="7dp"
        android:queryHint="@string/search_hint"
        app:layout_constraintBottom_toTopOf="@+id/buttonSearch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.13"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/textViewWelcome"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/text_main"
        android:gravity="center_horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/open_search_dialog"
        app:layout_constraintBottom_toTopOf="@+id/textViewWelcome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchViewSearch" />

    <Button
        android:id="@+id/buttonOtherActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/open_news_activity"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewWelcome"
        app:layout_constraintVertical_bias="0.07999998" />

</androidx.constraintlayout.widget.ConstraintLayout>